# trycase-app

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: prepare-release.js
src/: App.tsx  TestCaseAdvancedPage.tsx  TestCasePage.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CaseEditor.tsx  MermaidChart.tsx  TestCasePreview.tsx
src/pages/: TestCaseAdvancedPage.tsx
src/services/: cmds.ts  notice.ts
src/types/: index.ts  testcase.ts
src/utils/: dialog.ts  exporters.ts  logger.ts  storage.ts
